<resources>
    <string name="app_name">Data</string>
    <string name="tab_import">Import</string>
    <string name="tab_import_test">Import test</string>
    <string name="import_source">Import Source</string>
    <string name="destination">Destination</string>
    <string name="collapse_button_content_description">Collapse Button</string>
    <string name="import_selected">Import Selected</string>
    <string name="export_selected">Export Selected</string>
    <string name="done">Done</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="target">Target</string>
    <string name="select_target">Select Target</string>
    <string name="copy_and_replace">Replace</string>
    <string name="dont_copy">Don\'t Copy</string>
    <string name="keep_both">Keep Both</string>
    <string name="conflict">Conflict</string>
    <string name="new_id_title">Enter New Identifier</string>
    <string name="new_id_label">New identifier:</string>
    <string name="calculating_targets">Calculating Targets</string>
    <string name="checking_targets">Checking Potential Targets...</string>
    <string name="checking_conflicts">Checking Conflicts...</string>
    <string name="importing">Importing...</string>
    <string name="select_path">Select Path...</string>
    <string name="continue_string">Continue</string>
    <string name="next">Next</string>
    <string name="copy_click_string">Copy click on node</string>
    <string name="no_data_of_format_string">No data of selected format selected</string>
    <string name="no_operations_check_connectivity_string">No operations came back from server. Check connectivity
    </string>
    <string name="pfds">Grower/Farm/Field/Task</string>
    <string name="vehicles">Vehicles</string>
    <string name="imps">Implements</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="tasks">Tasks</string>
    <string name="boundaries">Boundaries</string>
    <string name="obstacles">Obstacles</string>
    <string name="guidance_groups">Swaths</string>
    <string name="guidance_patterns">Guidance Patterns</string>
    <string name="notes">Notes</string>
    <string name="product_mix_variety">Crop and Product Library</string>
    <string name="guidance_configurations">GuidanceConfigurations</string>
    <string name="grower">Grower</string>
    <string name="task">Task</string>
    <string name="prescription">Prescription</string>
    <string name="boundary">Boundary</string>
    <string name="guidance_group">Guidance Group</string>
    <string name="obstacle">Obstacle</string>
    <string name="product">Product</string>
    <string name="product_mix">Product Mix</string>
    <string name="variety">Variety</string>
    <string name="vehicle">Vehicle</string>
    <string name="implement">Implement</string>
    <string name="note">Note</string>
    <string name="guidance_configuration">Guidance Configuration</string>
    <string name="merge">Merge</string>
    <string name="products">Products</string>
    <string name="product_mixes">Product Mixes</string>
    <string name="varieties">Varieties</string>
    <string name="select_source">Select Import Source</string>
    <string name="import_drag_and_drop"><![CDATA[Drag & Drop\nto Import\nto Vehicle]]></string>
    <string name="export_drag_and_drop"><![CDATA[Drag & Drop \nto Export]]></string>
    <string name="select_all">Select All</string>
    <string formatted="false" name="x_of_y_format">%d of %d</string>
    <string name="usb_string">USB</string>
    <string name="cloud_string">Cloud</string>
    <string name="display_string">Display</string>
    <string name="display_numbered">Display %d</string>
    <string name="display_named">Display %s</string>
    <string name="select_string">Select</string>
    <string name="export_to">Destination</string>
    <string name="export_format">Export Format</string>
    <string name="tab_export">Export</string>
    <string name="percent_complete">% Complete</string>
    <string name="loading_string">Loading</string>
    <string name="exporting_string">Exporting</string>
    <string name="importing_string">Importing</string>
    <string name="exporting_data">Exporting Data</string>
    <string name="select_source_first">Select Import Source \nto get started</string>
    <string name="no_import_source">No import source device is detected. \nPlease check the device connection.</string>
    <string name="deselect_all">Deselect All</string>
    <string formatted="false" name="duplicate_file">A %s \"%s\" already exists</string>
    <string name="existing_file">Existing</string>
    <string name="existing_file_typed">Existing %s</string>
    <string name="new_file">New</string>
    <string name="new_file_typed">New %s</string>
    <string name="data_conflict">Data Conflict</string>
    <string name="rename_file">Rename %s</string>
    <string name="file_name">File Name</string>
    <string name="empty_discovery">No data found</string>
    <string name="export_cancel_confirmation">This will cancel current export.\nDo you want to proceed?</string>
    <string name="import_cancel_confirmation">This will cancel current import.\nDo you want to proceed?</string>
    <string name="format_description_title">Export Formats</string>
    <string name="format_description">ISOXML is the only format available. All files can\nbe exported in ISOXML.
    </string>
    <string name="destination_title">Supported Export Destinations:</string>
    <string name="case_destination_info">Please select the proper destination to ensure the export file structure is
        compatible with the destination file structure.
        \n
        \nYou can export to the USB for use on the following products:
        \n- Pro 1200
        \n- Pro 800
        \n- Pro 700
        \n- Desktop Software
        \n
        \nYou can export directly to the AFS Connect by selecting:
        \n- AFS Connect
    </string>
    <string name="new_holland_destination_info">Please select the proper destination to ensure the export file structure
        is compatible with the destination file structure.
        \n
        \nYou can export to the USB for use on the following products:
        \n- Intelliview 12
        \n- Intelliview 8
        \n- Intelliview IV
        \n- Desktop Software
        \n
        \nYou can export directly to the PLM Connect by selecting:
        \n- PLM Connect
    </string>
    <string name="error_no_data">No Data</string>
    <string name="error_no_source">No Source Datasource</string>
    <string name="error_no_target">No Destination Datasource</string>
    <string name="error_perform_ops">Perform Operations Error</string>
    <string name="error_update">Update Error</string>
    <string name="error_paste">Paste Error</string>
    <string name="error_calculate_conflicts">Calculate Conflicts Error</string>
    <string name="error_calculate_operations">Calculate Targets Error</string>
    <string name="error_discovery">Discovery Error</string>
    <string name="error_drag_drop">Please select destination.</string>
    <string name="error_usb_removal">USB Removal Error</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_cancelling">Cancelling...</string>
    <string name="status_successful">Successful</string>
    <string name="status_starting">Starting...</string>
    <string name="import_complete">Import Completed</string>
    <string name="import_complete_left_layout">Import\nCompleted</string>
    <string name="import_cancel">Import Cancelled</string>
    <string name="export_complete">Export Completed</string>
    <string name="export_complete_left_layout">Export\nCompleted</string>
    <string name="export_cancel">Export Cancelled</string>
    <string name="export_in_progress">Export in Progress</string>
    <string name="import_in_progress">Import in Progress</string>
    <string name="dataexchange_accessible_after_process_finished">You may access this page once the\nprocess is
        completed.
    </string>
    <string name="dataexchange_leave_during_export_process">You may leave this page during the export</string>
    <string name="dataexchange_leave_during_import_process">You may leave this page during the import</string>
    <string name="error_delete">Fail to delete data</string>
    <string name="delete_progress_title">Deleting data</string>
    <string name="delete_progress_content">In progress ...</string>
    <plurals name="delete_confirm_dialog_title">
        <item quantity="one">Delete Confirmation (%1$d Item)</item>
        <item quantity="other">Delete Confirmation (%1$d Items)</item>
    </plurals>
    <plurals name="delete_confirm_dialog_content">
        <item quantity="one">&lt;b>Are you sure you want to delete %1$d item? &lt;/b> &lt;br /> The item will be
            permanently deleted.
        </item>
        <item quantity="other">&lt;b>Are you sure you want to delete %1$d items? &lt;/b> &lt;br />The items will be
            permanently deleted.
        </item>
    </plurals>
    <string name="usb_data_available">USB Data Available</string>
    <string name="usb_no_data_available">No USB Data Available</string>
    <string name="usb_scanning">Scanning USB Stick...</string>
    <string name="stop">Stop</string>
    <string name="status_progress">%1$s %2$d/%3$d</string>
    <string name="product_default_rate">Default Rate</string>
    <string name="product_form">Form</string>
    <string name="product_name">Name</string>
    <string name="product_mix_add_button_title">Add</string>
    <string name="product_mix_default_text_edittext">Product Name</string>
    <string name="product_mix_default_text_picklist">Product Form</string>
    <string name="product_mix_search_hint">Product Mix, form, rate</string>
    <string name="product_mix_subheader_total_mix">Total: 0 product mixes</string>
    <plurals name="product_mix_subheader_total_mix_format">
        <item quantity="zero">Total: 0 product mixes</item>
        <item quantity="one">Total: 1 product mix</item>
        <item quantity="other">Total: %1$d product mixes</item>
    </plurals>
    <string name="product_mix_title">Product Mix</string>
    <string name="product_mix_text_button_add_product_mix">Add Product Mix +</string>
    <string name="product_mix_title_dialog_add_product_mix">Add Product Mix</string>
    <string name="product_mix_title_dialog_edit_product_mix">Edit Product Mix</string>
    <string name="product_mix_title_dialog_copy_product_mix">Copy Product Mix</string>
    <string name="product_mix_title_add_new_product">Add New Product</string>
    <string name="product_mix_title_add_new_carrier">Add New Carrier</string>
    <string name="product_mix_text_button_remove">Remove x</string>
    <string name="product_mix_text_button_add_more">Add More +</string>
    <string name="product_mix_title_category_button_title_mix_products">Mix Products</string>
    <string name="product_mix_title_application_rates">Application Rates</string>
    <string name="product_mix_title_application_rate_1">Application Rate 1 (Default)</string>
    <string name="product_mix_title_application_rate_2">Application Rate 2</string>
    <string name="product_mix_title_min_application_rate">Min Application Rate</string>
    <string name="product_mix_title_max_application_rate">Max Application Rate</string>
    <string name="product_mix_title_delta_application_rate">Delta Application Rate</string>
    <string name="product_mix_title_application_rates_per_product">Application Rates per Product</string>
    <string name="product_mix_title_advanced">Advanced</string>
    <string name="product_mix_title_usage">Usage</string>
    <string name="product_mix_title_picklist_default_select">Select</string>
    <string name="product_section_header">Products</string>
    <string name="unit_gal_per_acre">gal/ac</string>
</resources>