<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 CNH Industrial NV. All rights reserved.
  ~
  ~  This software contains proprietary information of CNH Industrial NV. Neither
  ~  receipt nor possession thereof confers any right to reproduce, use, or
  ~  disclose in whole or in part any such information without written
  ~ authorization from CNH Industrial NV.
  -->

<com.cnh.android.widget.control.CategoryButtons
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:cnh="http://schemas.android.com/apk/res-auto"
        android:id="@+id/product_mix_advanced_categorybuttons_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        cnh:title="@string/product_mix_title_advanced"
        cnh:setAutoResizable="true">
    <com.cnh.android.widget.control.PickList
            android:id="@id/product_usage_pick_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cnh:defaultPickListTextId="@string/product_mix_title_picklist_default_select"
            cnh:headerText="@string/product_mix_title_usage"
            android:layout_marginBottom="@dimen/product_dialog_input_margin_top"/>

    <include layout="@layout/product_dialog_package_size"/>
    <include layout="@layout/product_dialog_density"/>
    <include layout="@layout/advanced_product_information"/>

</com.cnh.android.widget.control.CategoryButtons>
